--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,13 +1,18 @@
 $baseFontFamily: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
 'Droid Sans', 'Helvetica Neue', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
 $pageWidthMax: 500px;
-$gap: 10px;
+$gap: 8px;
 
 $colorSuccess: #28a745;
 $colorDanger: #dc3545;
 $colorWhite: #ffffff;
 $colorLight: #f8f9fa;
 $colorBlack: #212529;
-$colorInfo: #d1ecf1;
+$colorInfo: #0c5460;
 
 $borderRadius: 2px;
+
+$controlHeight: 30px;
+$controlFontSize: 14px;
+
+$textFontSize: 16px;
