--- a/src/components/SimpleList/styles.scss
+++ b/src/components/SimpleList/styles.scss
@@ -3,8 +3,8 @@
 .list-item {
   &__title {
     font-family: $baseFontFamily;
-    font-size: 18px;
-    line-height: 40px;
+    font-size: $controlFontSize;
+    line-height: $controlHeight;
     cursor: pointer;
   }
 
