button, input line-heigth fix

--- a/src/styles/_form.scss
+++ b/src/styles/_form.scss
@@ -7,7 +7,7 @@ $darkenAmount: 4;
   height: $controlHeight;
   box-sizing: border-box;
   padding: 0 $gap;
-  line-height: $controlHeight;
+  line-height: $controlHeight - 2;
   font-size: $controlFontSize;
   border: 1px solid lightgray;
   border-radius: $borderRadius;
@@ -31,7 +31,7 @@ $darkenAmount: 4;
   height: $controlHeight;
   box-sizing: border-box;
   border: 1px solid transparent;
-  line-height: $controlHeight;
+  line-height: $controlHeight - 2;
   padding: 0 1.5*$gap;
   font-size: $controlFontSize;
   min-width: 70px;
